# boozelib

./: .bumpversion.cfg  .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  CHANGES.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  noxfile.py  pyproject.toml  setup.py
boozelib/: __init__.py  boozelib.py
changes/: 1.feature  2.feature  3.feature  4.change  6KCt40zqdIYo.feature  6huYjVlb7hjU.feature  CreASijhgxYO.removal  DnDiDSijOmxZ.feature  GdogQg4utZ18.change  HT0uebvnzasE.feature  ICrCDHKByxxk.change  LGcZb6ejQUwM.feature  MDdVhnflVuf6.change  MURutOdYaWie.feature  OUfP9YfbQEJ0.change  _33XgwzowM.change.md  _CMBLSsebu.feature.md  _CQM3Y6wZL.change.md  _F0iLcPyZY.feature.md  _IeOvZR0f4.change.md  _KCt40zqdIYo.feature.md  _KfNsK9w0F.change.md  _RQFx5yWLR.change.md  _VoU54ywKa.feature.md  _cySOnQqc2.feature.md  _dogQg4utZ18.change.md  _gNwenGd2o.removal.md  _gSn1O3cX1.removal.md  _lKjiiX1Kv.change.md  _nDiDSijOmxZ.feature.md  _nKN8LhsDV.change.md  _pNhYEsX8V.change.md  _sC0xCk5qC.removal.md  d24gbr43dJZA.change  mRZu06qTtAH9.feature  sP3okRkDV4Za.feature  template.j2  xGldPTGtvdc9.fix
docs/: Makefile  background.rst  conf.py  formulas.rst  functions.rst  index.rst  install.rst  modul.rst
docs/_build/doctrees/: environment.pickle  formulas.doctree  functions.doctree  index.doctree  install.doctree
docs/_build/html/: .buildinfo  formulas.html  functions.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
docs/_build/html/_modules/: boozelib.html  index.html
docs/_build/html/_sources/: formulas.txt  index.txt
docs/includes/: links.rst
src/: boozelib.py
test/: test_boozelib.py
tests/: classes.py  conftest.py  data.py  fixtures.py  test_boozelib.py  test_get_bac.py  test_get_blood_alcohol_content.py  test_get_blood_alcohol_degradation.py  test_get_degradation.py  utils.py
