[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "boozelib"
version = "0.6.0"
description = """
A Python module containing a couple of tools to calculate the \
blood alcohol content of people.
"""
authors = ["Brutus <brutus.dmc@googlemail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/brutus/boozelib/"
repository = "https://github.com/brutus/boozelib/"
documentation = "https://boozelib.readthedocs.org/"
classifiers = [
	"Intended Audience :: Developers",
	"Intended Audience :: Healthcare Industry",
	"Natural Language :: English",
	"Programming Language :: Python",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.poetry.dependencies]
bump2version = {version = "^1.0.0", optional = true}
nox = {version = "^2019.11.9", optional = true}
pre-commit = {version = "^2.3.0", optional = true}
python = ">=3.8"
sphinx-autobuild = {version = "^2020.9.1", optional = true}
towncrier = {version = "^19.2.0", optional = true}

[tool.poetry.extras]
dev = [ "bump2version", "pre-commit", "towncrier" ]
doc = [ "sphinx-autobuild" ]
test = [ "nox" ]

[tool.black]
target-version = ["py38"]

[tool.flakehell]
max_line_length = 88
exclude = [".nox/*"]

[tool.flakehell.plugins]
pyflakes = ["+*"]

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
template = "changes/template.j2"
start_string = "<!-- TOWNCRIER -->\n"
underlines = ["", ""]
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/brutus/boozelib/issues/{issue})"
wrap = true

# TOWNCRIER TYPES: feature, change, removal, fix, misc
[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "change"
name = "Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false
